--- a/persistent-cdc.cabal
+++ b/persistent-cdc.cabal
@@ -16,11 +16,15 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Database.Persist.CDC
+                       Database.Persist.CDC.TH
   other-modules:       Database.Persist.CDC.Class.PersistRecordCDC
                        Database.Persist.CDC.Class.PersistStoreCDC
                        Database.Persist.CDC.Class.PersistStoreCDCType
   build-depends:       base >= 4.7 && < 5
                        , persistent
+                       , persistent-template
+                       , template-haskell
+                       , text
                        , transformers
   default-language:    Haskell2010
 
