--- a/stack.yaml
+++ b/stack.yaml
@@ -7,6 +7,9 @@ resolver: lts-7.7
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- ../persistent/persistent
+- ../persistent/persistent-template
+- ../persistent/persistent-sqlite
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
 
