Added all tests from persistent-test:PersistentTest Tests for NoPrefix and ReverseField not supported yet

--- a/persistent-cdc.cabal
+++ b/persistent-cdc.cabal
@@ -54,6 +54,9 @@ test-suite test
                         , fast-logger
                         , monad-control
                         , persistent-sqlite
+                        , conduit
+                        , lifted-base
+                        , unordered-containers
   cpp-options: -DWITH_SQLITE
 
 
