--- a/persistent-cdc.cabal
+++ b/persistent-cdc.cabal
@@ -25,6 +25,7 @@ library
                         , persistent-template
                         , template-haskell
                         , text
+                        , time
                         , transformers
   default-language:     Haskell2010
 
@@ -59,6 +60,7 @@ test-suite test
                         , conduit
                         , lifted-base
                         , unordered-containers
+                        , time
   cpp-options: -DWITH_SQLITE
 
 
